--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -2,7 +2,11 @@
 title: "index"
 author: "Briana"
 date: "11/30/2017"
-output: html_document
+output: 
+  html_document:
+    code_folding: hide
+    toc: true
+    toc_float: true
 ---
 
 ```{r setup, include=FALSE}
